Fixed visibility issues in IE
LF-1632

--- a/source/css/app.css
+++ b/source/css/app.css
@@ -210,8 +210,9 @@ form > p,
 }
 
 #patientsArea > a {
-  display: block;
+  display: inline-block;
   margin-top: 5px;
+  width: auto;
 }
 
 .resources-area {
